--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,9 @@ node_modules
 .env.test.local
 .env.production.local
 
+# ignore .eslintcache
+.eslintcache
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
